--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TopReview"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -19,26 +23,34 @@
             android:theme="@style/Theme.TopReview">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".activities.LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light">
-            <!-- Your other configurations -->
+            android:theme="@style/Theme.MaterialComponents.Light">
         </activity>
+
         <activity android:name=".activities.SignUpActivity"
             android:label="Sign Up"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:theme="@style/Theme.MaterialComponents.Light">
         </activity>
+
         <activity android:name=".activities.HomeActivity"
             android:exported="true"
             android:label="Home"
             android:theme="@style/Theme.TopReview">
         </activity>
+
+        <activity android:name=".activities.AddReviewActivity"
+            android:exported="true"
+            android:label="Home"
+            android:theme="@style/Theme.TopReview">
+        </activity>
+
     </application>
 
 </manifest>
