feat: done with review edit and add flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -29,7 +32,7 @@
 
         <activity android:name=".activities.LoginActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="Login"
             android:theme="@style/Theme.MaterialComponents.Light">
         </activity>
 
@@ -47,7 +50,13 @@
 
         <activity android:name=".activities.AddReviewActivity"
             android:exported="true"
-            android:label="Home"
+            android:label="Add your review"
+            android:theme="@style/Theme.TopReview">
+        </activity>
+
+        <activity android:name=".activities.EditReviewActivity"
+            android:exported="true"
+            android:label="Edit your review"
             android:theme="@style/Theme.TopReview">
         </activity>
 
