--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             </intent-filter>
         </activity>
 
+
         <activity android:name=".activities.LoginActivity"
             android:exported="true"
             android:label="Login"
@@ -41,6 +42,7 @@
             android:exported="true"
             android:theme="@style/Theme.MaterialComponents.Light">
         </activity>
+        <activity android:name=".activities.EditProfileActivity" />
 
         <activity android:name=".activities.HomeActivity"
             android:exported="true"
