--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.TopReview"
         tools:targetApi="31">
@@ -29,39 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".activities.LoginActivity"
-            android:exported="true"
-            android:label="Login"
-            android:theme="@style/Theme.MaterialComponents.Light">
-        </activity>
-
-        <activity android:name=".activities.SignUpActivity"
-            android:label="Sign Up"
-            android:exported="true"
-            android:theme="@style/Theme.MaterialComponents.Light">
-        </activity>
-        <activity android:name=".activities.EditProfileActivity" />
-
-        <activity android:name=".activities.HomeActivity"
-            android:exported="true"
-            android:label="Home"
-            android:theme="@style/Theme.TopReview">
-        </activity>
-
-        <activity android:name=".activities.AddReviewActivity"
-            android:exported="true"
-            android:label="Add your review"
-            android:theme="@style/Theme.TopReview">
-        </activity>
-
-        <activity android:name=".activities.EditReviewActivity"
-            android:exported="true"
-            android:label="Edit your review"
-            android:theme="@style/Theme.TopReview">
-        </activity>
-
     </application>
 
 </manifest>
